[package]
name = "yap_server"
version = "0.1.0"
authors = ["Ratchaphon Manosuthi <themelo64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"
tui = { version = "0.13", default-features = false, features = ['crossterm'] }
tungstenite = "0.11"
tokio-tungstenite = "0.11"
http = "0.2"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hashbrown = { version = "0.9", features = ["serde"] }
uuid = { version = "0.8", features = ["serde"] }
warp = "0.2"
env_logger = "0.8"
log = "0.4"
futures = "0.3"
ctrlc = "3.1"
rand = "0.8"
crossbeam = "0.8"
toml = "0.5"
async-trait = "0.1"
mysql = "*"
structopt = "0.3"